# cstyle

./: .gitignore  ctl  readme.md
src/: chapter-building.tex  chapter-code.tex  chapter-command-programs.tex  chapter-comments.tex  chapter-data-structures.tex  chapter-declares.tex  chapter-development.tex  chapter-documents.tex  chapter-files.tex  chapter-functions.tex  chapter-gui-programs.tex  chapter-interface.tex  chapter-language.tex  chapter-names.tex  chapter-preprocessors.tex  chapter-program-interface.tex  chapter-source-code.tex  chapter-statements.tex  main.tex  references.tex  section-change-logs.tex  section-man-pages.tex
src/asset/: changelog-tmp.md  cstyle-readme.md  for-tmp.c  function-tmp.c  gitignore.txt  header-tmp.h  if-tmp.c  main-imp-tmp.c  prototype-imp-tmp.c  readme-tmp.md  remove-unpredicted-files-git.sh  using-of-tmp-directory.sh
src/chapter-building/: cmakelists.tex  dest-directory.tex  dist-directory.tex  src-directory.tex
src/chapter-code/: comments.tex  declares.tex  enum.tex  functions.tex  headers.tex  loop.tex  main-imp.tex  names.tex  preprocessors.tex  prototype-imps.tex  selection.tex  (+4 more)
src/sample/: CMakeLists.txt
src/sample/include/cstyle/: error.h
src/sample/src/imp/: CMakeLists.txt
src/sample/src/imp/cstyle/: error.c  file.c  for.c  function.c  if.c  variable.c
src/sample/src/imp/sample/: file.c  run.c  squared-num-good-strings.c
src/sample/src/inc/cstyle/: enum.h  file.h  invalid-typedef.h  struct.h  valid-typedef.h
src/sample/src/sample/: squared-num-bad-comments.c  squared-num-bad-strings.c  squared-num-good.c
(+26 files in other folders)
